mm-phc differences

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -556,7 +556,16 @@ j%% TODO understand what this is about
   publisher={APS}
 }
 % Tsukerman 2011 EffParam of metamaterial Rigorous Whithey interpolation
-% Tsukerman 2011 Nonlocal homogenization metamaterials by 2interpolation
+@article{tsukerman2011nonlocal,
+  title={Nonlocal homogenization of metamaterials by dual interpolation of fields},
+  author={Tsukerman, Igor},
+  journal={JOSA B},
+  volume={28},
+  number={12},
+  pages={2956--2965},
+  year={2011},
+  publisher={Optical Society of America}
+}
 /*}}}*/
 % TODO 
 % Gibbons 2009 swissroll metamaterial
