--- a/fdphd.bib
+++ b/fdphd.bib
@@ -38,7 +38,7 @@
   doi = {10.1364/OE.22.030492},
 }
 
-@inproceedings{,
+@inproceedings{dominec2015poster,
   TITLE={Transition between metamaterial and photonic-crystal behavior in arrays of dielectric rods},
   AUTHOR={Dominec, F and Kadlec, C and N{\v{e}}mec, H and Ku{\v{z}}el, P and Kadlec, F},
   BOOKTITLE={Nanometa 2015, Seefeld (Austria)},
@@ -329,7 +329,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 /*}}}*/
 % ---- other ----/*{{{*/
-/*}}}*/
+% /*}}}*/
 
 % == Sources metamaterial theory ==
 %  -- books --/*{{{*/
